modules/lib/dependencies/libopus/cobalt_opus_shim.h

/**
 * Re-initializes a repacketizer, clearing its queue of submitted frames.
 *
 * Forwards to opus_repacketizer_init. Must be called between independent
 * combine or split operations, and whenever the submitted-packet configuration
 * (coding mode, bandwidth, frame size or channel count) changes or the 120 ms
 * total-duration limit is reached.
 *
 * @param rp the repacketizer handle from cobalt_opus_repacketizer_create.
 * @return COBALT_OPUS_OK on success, COBALT_OPUS_BAD_ARG for a NULL handle.
 */
int32_t cobalt_opus_repacketizer_init(void *rp);
/**
 * Appends one Opus packet to the repacketizer's queue.
 *
 * Forwards to opus_repacketizer_cat. The packet must match the coding mode,
 * bandwidth, frame size and channel count of any packets submitted since the
 * last cobalt_opus_repacketizer_init, and the running total duration must not
 * exceed 120 ms. libopus does NOT copy the bytes; the data buffer must remain
 * valid until the next cobalt_opus_repacketizer_init, _out_range, _out or
 * _destroy on this handle.
 *
 * @param rp   the repacketizer handle from cobalt_opus_repacketizer_create.
 * @param data the Opus packet bytes to append.
 * @param len  the packet length in bytes.
 * @return COBALT_OPUS_OK on success, COBALT_OPUS_BAD_ARG for a NULL argument,
 *         COBALT_OPUS_INVALID_PACKET if the packet is malformed or incompatible
 *         with the queued packets.
 */
int32_t cobalt_opus_repacketizer_cat(void *rp, const uint8_t *data, int32_t len);
/**
 * Returns the total number of frames currently queued in the repacketizer.
 *
 * Forwards to opus_repacketizer_get_nb_frames. This bounds the frame indices
 * valid for cobalt_opus_repacketizer_out_range.
 *
 * @param rp the repacketizer handle from cobalt_opus_repacketizer_create.
 * @return the queued frame count (zero or more) on success, or
 *         COBALT_OPUS_BAD_ARG for a NULL handle.
 */
int32_t cobalt_opus_repacketizer_get_nb_frames(void *rp);
/**
 * Builds one packet from a contiguous range of the repacketizer's queued frames.
 *
 * Forwards to opus_repacketizer_out_range, writing a packet holding frames
 * [begin, end) into data up to maxLen bytes. The return value is the packet
 * length in bytes, or negative on error.
 *
 * @param rp     the repacketizer handle from cobalt_opus_repacketizer_create.
 * @param begin  the index of the first frame to include.
 * @param end    one past the index of the last frame to include.
 * @param data   the output buffer the packet is written into.
 * @param maxLen the capacity of data in bytes.
 * @return the output packet length in bytes on success, or a negative libopus
 *         error code (COBALT_OPUS_BAD_ARG for an invalid range or NULL argument,
 *         COBALT_OPUS_BUFFER_TOO_SMALL if maxLen is insufficient).
 */
int32_t cobalt_opus_repacketizer_out_range(void *rp, int32_t begin, int32_t end, uint8_t *data, int32_t maxLen);
/**
 * Builds one packet from all of the repacketizer's queued frames.
 *
 * Forwards to opus_repacketizer_out, the convenience equivalent of
 * cobalt_opus_repacketizer_out_range over the full queued range.
 *
 * @param rp     the repacketizer handle from cobalt_opus_repacketizer_create.
 * @param data   the output buffer the packet is written into.
 * @param maxLen the capacity of data in bytes.
 * @return the output packet length in bytes on success, or a negative libopus
 *         error code (COBALT_OPUS_BAD_ARG for a NULL argument,
 *         COBALT_OPUS_BUFFER_TOO_SMALL if maxLen is insufficient).
 */
int32_t cobalt_opus_repacketizer_out(void *rp, uint8_t *data, int32_t maxLen);
/**
 * Parses an Opus packet into its constituent frames, returning a portable
 * framing description.
 *
 * Wraps opus_packet_parse, whose native output is an array of pointers INTO the
 * input packet (const unsigned char *frames[48]) that no portable binding can
 * read back. This wrapper instead writes, for each parsed frame, its byte OFFSET
 * from the start of data into outFrameOffsets and its length into outFrameSizes,
 * and writes the table-of-contents byte through outToc and the payload start
 * offset through outPayloadOffset. The caller-supplied arrays must each hold at
 * least 48 entries (the maximum frames per Opus packet). The frame bytes are not
 * copied; the caller reads them from data using the returned offsets and sizes.
 *
 * @param data             the Opus packet to parse.
 * @param len              the packet length in bytes.
 * @param outToc           receives the table-of-contents byte; may be NULL to
 *                         skip.
 * @param outFrameOffsets  receives each frame's byte offset from data; must hold
 *                         at least 48 int32 entries and must not be NULL.
 * @param outFrameSizes    receives each frame's length in bytes; must hold at
 *                         least 48 int32 entries and must not be NULL.
 * @param outPayloadOffset receives the payload start offset from data; may be
 *                         NULL to skip.
 * @return the number of frames parsed (zero or more) on success, or a negative
 *         libopus error code (COBALT_OPUS_BAD_ARG for a NULL required argument,
 *         COBALT_OPUS_INVALID_PACKET for a malformed packet).
 */
int32_t cobalt_opus_packet_parse(const uint8_t *data,
                                 int32_t len,
                                 uint8_t *outToc,
                                 int32_t *outFrameOffsets,
                                 int32_t *outFrameSizes,
                                 int32_t *outPayloadOffset);
/**
 * Returns the number of frames in an Opus packet.
 *
 * Forwards to opus_packet_get_nb_frames.
 *
 * @param data the Opus packet bytes.
 * @param len  the packet length in bytes.
 * @return the frame count on success, or a negative libopus error code
 *         (COBALT_OPUS_BAD_ARG for a NULL packet or insufficient data,
 *         COBALT_OPUS_INVALID_PACKET for a malformed packet).
 */
int32_t cobalt_opus_packet_get_nb_frames(const uint8_t *data, int32_t len);