modules/lib/src/main/java/com/github/auties00/cobalt/calls/media/audio/codec/opus/bindings/CobaltOpus.java


    /**
     * {@snippet lang=c :
     * int32_t cobalt_opus_repacketizer_init(void *rp)
     * }
     */
    public static int cobalt_opus_repacketizer_init(MemorySegment rp) {
        var mh$ = cobalt_opus_repacketizer_init.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_opus_repacketizer_init", rp);
            }
            return (int)mh$.invokeExact(rp);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_opus_repacketizer_cat {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpus.C_INT,
            CobaltOpus.C_POINTER,
            CobaltOpus.C_POINTER,
            CobaltOpus.C_INT
        );

        public static final MemorySegment ADDR = CobaltOpus.findOrThrow("cobalt_opus_repacketizer_cat");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_repacketizer_cat(void *rp, const uint8_t *data, int32_t len)
     * }
     */
    public static FunctionDescriptor cobalt_opus_repacketizer_cat$descriptor() {
        return cobalt_opus_repacketizer_cat.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_repacketizer_cat(void *rp, const uint8_t *data, int32_t len)
     * }
     */
    public static MethodHandle cobalt_opus_repacketizer_cat$handle() {
        return cobalt_opus_repacketizer_cat.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_repacketizer_cat(void *rp, const uint8_t *data, int32_t len)
     * }
     */
    public static MemorySegment cobalt_opus_repacketizer_cat$address() {
        return cobalt_opus_repacketizer_cat.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_opus_repacketizer_cat(void *rp, const uint8_t *data, int32_t len)
     * }
     */
    public static int cobalt_opus_repacketizer_cat(MemorySegment rp, MemorySegment data, int len) {
        var mh$ = cobalt_opus_repacketizer_cat.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_opus_repacketizer_cat", rp, data, len);
            }
            return (int)mh$.invokeExact(rp, data, len);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_opus_repacketizer_get_nb_frames {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpus.C_INT,
            CobaltOpus.C_POINTER
        );

        public static final MemorySegment ADDR = CobaltOpus.findOrThrow("cobalt_opus_repacketizer_get_nb_frames");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_repacketizer_get_nb_frames(void *rp)
     * }
     */
    public static FunctionDescriptor cobalt_opus_repacketizer_get_nb_frames$descriptor() {
        return cobalt_opus_repacketizer_get_nb_frames.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_repacketizer_get_nb_frames(void *rp)
     * }
     */
    public static MethodHandle cobalt_opus_repacketizer_get_nb_frames$handle() {
        return cobalt_opus_repacketizer_get_nb_frames.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_repacketizer_get_nb_frames(void *rp)
     * }
     */
    public static MemorySegment cobalt_opus_repacketizer_get_nb_frames$address() {
        return cobalt_opus_repacketizer_get_nb_frames.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_opus_repacketizer_get_nb_frames(void *rp)
     * }
     */
    public static int cobalt_opus_repacketizer_get_nb_frames(MemorySegment rp) {
        var mh$ = cobalt_opus_repacketizer_get_nb_frames.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_opus_repacketizer_get_nb_frames", rp);
            }
            return (int)mh$.invokeExact(rp);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_opus_repacketizer_out_range {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpus.C_INT,
            CobaltOpus.C_POINTER,
            CobaltOpus.C_INT,
            CobaltOpus.C_INT,
            CobaltOpus.C_POINTER,
            CobaltOpus.C_INT
        );

        public static final MemorySegment ADDR = CobaltOpus.findOrThrow("cobalt_opus_repacketizer_out_range");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_repacketizer_out_range(void *rp, int32_t begin, int32_t end, uint8_t *data, int32_t maxLen)
     * }
     */
    public static FunctionDescriptor cobalt_opus_repacketizer_out_range$descriptor() {
        return cobalt_opus_repacketizer_out_range.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_repacketizer_out_range(void *rp, int32_t begin, int32_t end, uint8_t *data, int32_t maxLen)
     * }
     */
    public static MethodHandle cobalt_opus_repacketizer_out_range$handle() {
        return cobalt_opus_repacketizer_out_range.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_repacketizer_out_range(void *rp, int32_t begin, int32_t end, uint8_t *data, int32_t maxLen)
     * }
     */
    public static MemorySegment cobalt_opus_repacketizer_out_range$address() {
        return cobalt_opus_repacketizer_out_range.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_opus_repacketizer_out_range(void *rp, int32_t begin, int32_t end, uint8_t *data, int32_t maxLen)
     * }
     */
    public static int cobalt_opus_repacketizer_out_range(MemorySegment rp, int begin, int end, MemorySegment data, int maxLen) {
        var mh$ = cobalt_opus_repacketizer_out_range.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_opus_repacketizer_out_range", rp, begin, end, data, maxLen);
            }
            return (int)mh$.invokeExact(rp, begin, end, data, maxLen);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_opus_repacketizer_out {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpus.C_INT,
            CobaltOpus.C_POINTER,
            CobaltOpus.C_POINTER,
            CobaltOpus.C_INT
        );

        public static final MemorySegment ADDR = CobaltOpus.findOrThrow("cobalt_opus_repacketizer_out");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_repacketizer_out(void *rp, uint8_t *data, int32_t maxLen)
     * }
     */
    public static FunctionDescriptor cobalt_opus_repacketizer_out$descriptor() {
        return cobalt_opus_repacketizer_out.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_repacketizer_out(void *rp, uint8_t *data, int32_t maxLen)
     * }
     */
    public static MethodHandle cobalt_opus_repacketizer_out$handle() {
        return cobalt_opus_repacketizer_out.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_repacketizer_out(void *rp, uint8_t *data, int32_t maxLen)
     * }
     */
    public static MemorySegment cobalt_opus_repacketizer_out$address() {
        return cobalt_opus_repacketizer_out.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_opus_repacketizer_out(void *rp, uint8_t *data, int32_t maxLen)
     * }
     */
    public static int cobalt_opus_repacketizer_out(MemorySegment rp, MemorySegment data, int maxLen) {
        var mh$ = cobalt_opus_repacketizer_out.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_opus_repacketizer_out", rp, data, maxLen);
            }
            return (int)mh$.invokeExact(rp, data, maxLen);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_opus_packet_parse {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpus.C_INT,
            CobaltOpus.C_POINTER,
            CobaltOpus.C_INT,
            CobaltOpus.C_POINTER,
            CobaltOpus.C_POINTER,
            CobaltOpus.C_POINTER,
            CobaltOpus.C_POINTER
        );

        public static final MemorySegment ADDR = CobaltOpus.findOrThrow("cobalt_opus_packet_parse");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_packet_parse(const uint8_t *data, int32_t len, uint8_t *outToc, int32_t *outFrameOffsets, int32_t *outFrameSizes, int32_t *outPayloadOffset)
     * }
     */
    public static FunctionDescriptor cobalt_opus_packet_parse$descriptor() {
        return cobalt_opus_packet_parse.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_packet_parse(const uint8_t *data, int32_t len, uint8_t *outToc, int32_t *outFrameOffsets, int32_t *outFrameSizes, int32_t *outPayloadOffset)
     * }
     */
    public static MethodHandle cobalt_opus_packet_parse$handle() {
        return cobalt_opus_packet_parse.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_packet_parse(const uint8_t *data, int32_t len, uint8_t *outToc, int32_t *outFrameOffsets, int32_t *outFrameSizes, int32_t *outPayloadOffset)
     * }
     */
    public static MemorySegment cobalt_opus_packet_parse$address() {
        return cobalt_opus_packet_parse.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_opus_packet_parse(const uint8_t *data, int32_t len, uint8_t *outToc, int32_t *outFrameOffsets, int32_t *outFrameSizes, int32_t *outPayloadOffset)
     * }
     */
    public static int cobalt_opus_packet_parse(MemorySegment data, int len, MemorySegment outToc, MemorySegment outFrameOffsets, MemorySegment outFrameSizes, MemorySegment outPayloadOffset) {
        var mh$ = cobalt_opus_packet_parse.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_opus_packet_parse", data, len, outToc, outFrameOffsets, outFrameSizes, outPayloadOffset);
            }
            return (int)mh$.invokeExact(data, len, outToc, outFrameOffsets, outFrameSizes, outPayloadOffset);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_opus_packet_get_nb_frames {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpus.C_INT,
            CobaltOpus.C_POINTER,
            CobaltOpus.C_INT
        );

        public static final MemorySegment ADDR = CobaltOpus.findOrThrow("cobalt_opus_packet_get_nb_frames");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }
